fix the z-index about the logo triggering the sidebar

--- a/src/components/elements/Cardslist/index.css
+++ b/src/components/elements/Cardslist/index.css
@@ -64,7 +64,7 @@
 
 .title {
   font-family: 'Cairo', sans-serif;
-  color: #8892b0;
+  color: white;
   margin-block-start: 0;
   margin-block-end: 0;
   padding: 10px 0 20px;
