--- a/src/components/elements/NavBarContainer/NavBar/index.css
+++ b/src/components/elements/NavBarContainer/NavBar/index.css
@@ -54,6 +54,7 @@
 }
 
 .nav-links {
+  border: 1px solid orange;
   color: #d9d9d9;
   display: flex;
   align-items: center;
