--- a/src/components/elements/NavBarContainer/SideBar/index.css
+++ b/src/components/elements/NavBarContainer/SideBar/index.css
@@ -20,6 +20,7 @@
 .sidebar-container.closed {
   opacity: 0;
   top: -100%;
+  z-index: 0;
 }
 
 @media screen and (max-width: 820px) {
